@@ -1,6 +1,7 @@
 
 1.1.5 release
 
+	* fix leak of torrent_peer objecs (entries in peer_list)
 	* fix leak of peer_class objects (when setting per-torrent rate limits)
 	* expose peer_class API to python binding
 	* fix integer overflow in whole_pieces_threshold logic
